--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>WebWorld</title>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="dist/js/main.min.js"></script>
     <link rel="stylesheet" href="dist/main.min.css">
@@ -14,7 +15,6 @@
     document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
     </script>
 </head>
-
 <body>
     <header>
         <div class="jsfixedNav">
