--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="first">
             <div class="first__web" id="webworld"><span>Web</span>World</div>
             <div class="first__social">
-                <a hresf="https://twitter.com/?lang=ru" target="blank"> <img src="img/t.png" alt=""></a>
+                <a href="https://twitter.com/?lang=ru" target="blank"> <img src="img/t.png" alt=""></a>
                 <a href="https://www.skype.com/ru/" target="blank"><img src="img/s.png" alt=""></a>
                 <a href="https://www.facebook.com" target="blank"><img src="img/f.png" alt=""></a>
             </div>
